alterações  nos cartões.

--- a/assets/style.css
+++ b/assets/style.css
@@ -11,9 +11,18 @@ display:flex;
     margin:1rem 1rem;
     background-color: aliceblue;
     height: 20rem;
+    flex-grow: 1;
+    flex-basis:calc(33% - 6rem);
 }
+
+.cartao_conteudo{ 
+    text-align: center;
+    height:100%;
+}
+
+
 .cartao_conteudo h3 {
-    background-color: tomato;
+    background-color: rgb(252, 255, 205);
     text-align: left;
     padding: 0.5rem;
     position: absolute;
@@ -29,7 +38,7 @@ display:flex;
 
 
 footer {
-    background-color: black;
+    background-color: rgb(127, 204, 255);
     color: white;
     position: fixed;
     bottom: 0;
