--- a/assets/style.css
+++ b/assets/style.css
@@ -1,15 +1,18 @@
 body{  
-    background-color: rgb(197, 243, 255);
+    background-color: rgb(175, 239, 255);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .container{ 
 display:flex;
+flex-wrap:wrap;
+justify-content: space-between;
+padding:4rem;
+gap:3rem;
 }
 
 .cartao{ 
     margin:1rem 1rem;
-    background-color: aliceblue;
     height: 20rem;
     flex-grow: 1;
     flex-basis:calc(33% - 6rem);
@@ -17,6 +20,7 @@ display:flex;
 
 .cartao_conteudo{ 
     text-align: center;
+    background-color: rgb(197, 253, 255);
     height:100%;
     transform-style:preserve-3d;
     transition: transform 300ms ease-in-out;
@@ -31,11 +35,13 @@ display:flex;
     margin: 0.6rem;
     border-radius: 0.6rem;
     font-size: 1vw;
+    backface-visibility:hidden;
 }
 
 .cartao_conteudo p {
-    margin-top: 1rem;
+    margin-top: 4rem;
     padding: 2rem;
+
 }
 
 
