--- a/assets/style.css
+++ b/assets/style.css
@@ -3,7 +3,7 @@ body{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-.container{ 
+#container{
 display:flex;
 flex-wrap:wrap;
 justify-content: space-between;
